objects/Unit_Item__c.object
<CustomObject>
    <label>Unit Item</label>
    <nameField>
        <label>Unit Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>NU</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unit Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Hours__c</fullName>
        <label>Operator Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Company-Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>